objects/Offsite_Phlebotomy_Service__c.object
<CustomObject>
    <fields>
        <fullName>AE_Email__c</fullName>
        <formula>Account_Name__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Informed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AE Informed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offsite Phlebotomy Services by this Account</relationshipLabel>
        <relationshipName>Onsite_Phlebotomy_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account_Name__r.Territory_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from ordering account, not OPS account</inlineHelpText>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory__c</fullName>
        <formula>Account_Name__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from ordering account, not OPS account</inlineHelpText>
        <label>Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip_Code__c</fullName>
        <formula>Account_Name__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from ordering account, not OPS account</inlineHelpText>
        <label>Account Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draw_Scheduled__c</fullName>
        <label>Draw Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>25500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPS_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OPS Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be OPS account.</errorMessage>
            <filterItems>
                <field>Account.Name</field>
                <operation>startsWith</operation>
                <value>OPS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OPS Account</relationshipLabel>
        <relationshipName>Offsite_Phlebotomy_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPS_Attachment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPS Attachment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPS_Attachment__c.Offsite_Phlebotomy_Service__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPS_Attachment__c</referenceTo>
        <relationshipLabel>Offsite Phlebotomy Services</relationshipLabel>
        <relationshipName>Offsite_Phlebotomy_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPS_Request_Received__c</fullName>
        <label>OPS Request Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPS_Status__c</fullName>
        <label>OPS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <label>Patient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phleb_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phleb Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phleb_Assignment__c</fullName>
        <formula>Phleb_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phleb Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phleb_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phleb Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>OPS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Onsite_Phlebotomy_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requesting_MD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting MD</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Onsite_Phlebotomy_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Enter the 2 character state abbreviation.</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRF_Emailed__c</fullName>
        <label>TRF Emailed</label>
        <type>Date</type>
    </fields>
    <label>Offsite Phlebotomy Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OPS_Status__c</columns>
        <columns>Patient_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Draw_Scheduled__c</columns>
        <columns>OPS_Account__c</columns>
        <columns>Phleb_Assigned__c</columns>
        <columns>Requesting_MD__c</columns>
        <columns>State__c</columns>
        <columns>TRF_Emailed__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OPEN_OPS</fullName>
        <columns>NAME</columns>
        <columns>OPS_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Requesting_MD__c</columns>
        <columns>State__c</columns>
        <columns>Patient_Name__c</columns>
        <columns>OPS_Status__c</columns>
        <columns>Phleb_Name__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPS_Status__c</field>
            <operation>equals</operation>
            <value>Open,On Hold</value>
        </filters>
        <label>OPEN OPS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OPS-{00000}</displayFormat>
        <label>OPS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offsite Phlebotomy Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>